// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> Compact story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        data-testid="accordion-button"
        id="headlessui-disclosure-button-3"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="4"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> CompactOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-40"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        data-testid="accordion-button"
        id="headlessui-disclosure-button-39"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="23"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--compact"
        data-testid="accordion-panel"
        id="headlessui-disclosure-panel-40"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Default story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-testid="accordion-button"
        id="headlessui-disclosure-button-1"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="1"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> DefaultOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-38"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-testid="accordion-button"
        id="headlessui-disclosure-button-37"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="21"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-testid="accordion-panel"
        id="headlessui-disclosure-panel-38"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Stacked story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-5"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="5"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-7"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="6"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-9"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="7"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-11"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="8"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedCompact story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-13"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="9"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-15"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="10"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-17"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="11"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-19"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="12"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedCompactOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-50"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-49"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="33"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--compact"
        id="headlessui-disclosure-panel-50"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-52"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-51"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="34"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--compact"
        id="headlessui-disclosure-panel-52"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-54"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-53"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="35"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--compact"
        id="headlessui-disclosure-panel-54"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-56"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-55"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="36"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--compact"
        id="headlessui-disclosure-panel-56"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedCompactOutline story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-29"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="17"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-31"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="18"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-33"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="19"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-35"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="20"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedCompactOutlineOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-66"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-65"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="49"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--compact accordion-panel--outline"
        id="headlessui-disclosure-panel-66"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-68"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-67"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="50"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--compact accordion-panel--outline"
        id="headlessui-disclosure-panel-68"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-70"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-69"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="51"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--compact accordion-panel--outline"
        id="headlessui-disclosure-panel-70"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-72"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--compact accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-71"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title accordion-title--compact"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="52"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--compact accordion-panel--outline"
        id="headlessui-disclosure-panel-72"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-42"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-41"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="25"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        id="headlessui-disclosure-panel-42"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-44"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-43"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="26"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        id="headlessui-disclosure-panel-44"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-46"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-45"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="27"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        id="headlessui-disclosure-panel-46"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <button
        aria-controls="headlessui-disclosure-panel-48"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-47"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="28"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        id="headlessui-disclosure-panel-48"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOutline story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-21"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="13"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-23"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="14"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-25"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="15"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-27"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="16"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> StackedOutlineOpen story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class="accordion--outline"
  >
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-58"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-57"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="41"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        id="headlessui-disclosure-panel-58"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-60"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-59"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="42"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        id="headlessui-disclosure-panel-60"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-62"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-61"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="43"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        id="headlessui-disclosure-panel-62"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
    <div
      class="accordion-item accordion-item--outline"
    >
      <button
        aria-controls="headlessui-disclosure-panel-64"
        aria-expanded="true"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button accordion-button--outline"
        data-bootstrap-override="clickable-style-icon"
        id="headlessui-disclosure-button-63"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Massa quam egestas massa.
        </h2>
        <svg
          class="icon accordion-button__icon accordion-button__icon--open"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="44"
          >
            hide content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
      <div
        class="accordion-panel accordion-panel--outline"
        id="headlessui-disclosure-panel-64"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla amet, massa ultricies iaculis. Quam lacus maecenas nibh malesuada. At tristique et ullamcorper rhoncus amet pharetra aliquet tortor. Suscipit dui, nunc sit dui tellus massa laoreet tellus.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> UsingRenderProp story renders snapshot 1`] = `
<div
  style="margin: 0.5rem;"
>
  <div
    class=""
  >
    <div
      class="accordion-item"
    >
      <button
        aria-expanded="false"
        class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral clickable-style--full-width button button--icon accordion-button"
        data-bootstrap-override="clickable-style-icon"
        data-testid="accordion-button"
        id="headlessui-disclosure-button-73"
        type="button"
      >
        <h2
          class="heading heading--size-h2 accordion-title"
        >
          Accordion Button 
          closed
        </h2>
        <svg
          class="icon accordion-button__icon"
          fill="currentColor"
          height="1.625rem"
          role="img"
          style="--icon-size: 1.625rem;"
          width="1.625rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="57"
          >
            show content
          </title>
          <use
            xlink:href="test-file-stub#expand-more"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
